# GenAI

./: Config  README.md  pyproject.toml  setup.cfg  setup.py  spati_agent.py  time_series_agent.py
AI_Bedrock/: Bedrock_Chatbot.py  Bedrock_Chatbot_fixed.py  Langchain_Chatbot.py  list_available_models.py  test_claude_access.py  test_nova_access.py
AI_Bedrock/mlu-wbedr-lab/: metadata.json  wbedr-lab1-bedrock-walkthrough.ipynb  wbedr-lab2-prompt-engineering.ipynb  wbedr-lab3-langchain-chat.ipynb
ProjectSPATI/: README.md
ProjectSPATI/configuration/aws_lambda/: handlers.py  lambda-transform.yml
ProjectSPATI/src/project_spati/: exceptions.py  traffic_etl.py
ProjectSPATI/src/project_spati/api/: bedrock_client.py
ProjectSPATI/test/: README.md
doc/: index.rst
src/project_spati/: __init__.py  handler.py
src/project_spati/api/: strands_agent.py
src/project_spati/ui/: app.py
src/project_spati/utils/: logger.py
test/: test_project_spati.py  test_traffic_etl.py
