[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project_spati"
version = "0.1.0"
description = "SP API Traffic Intelligence using LLMs"
authors = [
    {name = "SPATI Team", email = "spati-team@amazon.com"}
]
dependencies = [
    "boto3>=1.28.0",
    "streamlit>=1.24.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "strands-agents>=0.1.0",
    "langchain>=0.0.300",
    "requests>=2.31.0",
    "plotly>=5.15.0",
    "python-dateutil>=2.8.2"
]

[tool.setuptools]
packages = ["project_spati"]
